--- a/WebHotel/WebHotel/Views/Shared/_Layout.cshtml
+++ b/WebHotel/WebHotel/Views/Shared/_Layout.cshtml
@@ -31,10 +31,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Details">My Details</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Search">Search Rooms</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Book">Book A Room</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="MyBooking">My Bookings</a></li>
+                    <li><a asp-area="" asp-controller="Customers">My Details</a></li>
+                    <li><a asp-area="" asp-controller="Rooms">Search Rooms</a></li>
+                    <li><a asp-area="" asp-controller="Bookings" asp-action="Create">Book A Room</a></li>
+                    <li><a asp-area="" asp-controller="Bookings">My Bookings</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
