--- a/WebHotel/WebHotel/Views/Bookings/Create.cshtml
+++ b/WebHotel/WebHotel/Views/Bookings/Create.cshtml
@@ -17,8 +17,7 @@
                 <select asp-for="RoomID" class ="form-control" asp-items="ViewBag.RoomID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerEmail" class="control-label"></label>
-                <select asp-for="CustomerEmail" class ="form-control" asp-items="ViewBag.CustomerEmail"></select>
+                <input asp-for="CustomerEmail" value=@ViewData["CustomerEmail"] type="hidden">
             </div>
             <div class="form-group">
                 <label asp-for="CheckIn" class="control-label"></label>
@@ -30,11 +29,11 @@
                 <input asp-for="CheckOut" class="form-control" />
                 <span asp-validation-for="CheckOut" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Cost" class="control-label"></label>
                 <input asp-for="Cost" class="form-control" />
                 <span asp-validation-for="Cost" class="text-danger"></span>
-            </div>
+            </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
