--- a/WebHotel/WebHotel/Views/Bookings/Index.cshtml
+++ b/WebHotel/WebHotel/Views/Bookings/Index.cshtml
@@ -13,29 +13,37 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.CheckIn)
+                <a asp-action="Index" asp-route-sortorder="@ViewData["SortSurname"]">Surname</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CheckOut)
+                <a asp-action="Index" asp-route-sortorder="@ViewData["SortGivenName"]">Given Name</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Cost)
+                <a asp-action="Index" asp-route-sortorder="@ViewData["SortRoom"]">Room</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TheCustomer)
+                <a asp-action="Index" asp-route-sortorder="@ViewData["SortCheckIn"]">Check In Date</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RoomID)
+                <a asp-action="Index" asp-route-sortorder="@ViewData["SortCheckOut"]">Check Out Date</a>
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.TheRoom.Level)
+                <a asp-action="Index" asp-route-sortorder="@ViewData["SortCost"]">Cost</a>
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.TheCustomer.Surname)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TheCustomer.GivenName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.RoomID)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CheckIn)
             </td>
@@ -44,20 +52,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Cost)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TheCustomer.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RoomID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.TheRoom.Level)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
 }
