--- a/WebHotel/WebHotel/Views/Rooms/Index.cshtml
+++ b/WebHotel/WebHotel/Views/Rooms/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model IEnumerable<WebHotel.Models.Room>
 
+
 @{
     ViewData["Title"] = "Index";
 }
@@ -9,6 +10,30 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-controller="Rooms" asp-action="Index" class="form-inline" method="get">
+    <div class="form-group">
+        <label class="control-label">Number Of Bed(s):</label>
+        <select name="BedCount" class="form-control">
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+        </select>
+
+    </div>
+    <div class="form-group">
+        <label class="control-label">Check In Date:</label>
+        <input type="date" name="CheckIn" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label class="control-label">Check Out Date(s):</label>
+        <input type="date" name="CheckOut" class="form-control" />
+    </div>
+    <div class="form-group">
+        <input type="submit" value="Search" class="btn" />
+    </div>
+</form>
+
 <table class="table">
     <thead>
         <tr>
@@ -24,7 +49,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.Price)
             </th>
-            <th></th>
         </tr>
     </thead>
     <tbody>
@@ -41,11 +65,6 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
 }
