--- a/WebHotel/WebHotel/Views/Bookings/Create.cshtml
+++ b/WebHotel/WebHotel/Views/Bookings/Create.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="RoomID" class="control-label"></label>
-                <select asp-for="RoomID" class ="form-control" asp-items="ViewBag.RoomID"></select>
+                <select asp-for="RoomID" class="form-control" asp-items="ViewBag.RoomID"></select>
             </div>
             <div class="form-group">
                 <input asp-for="CustomerEmail" value=@ViewData["CustomerEmail"] type="hidden">
@@ -30,16 +30,24 @@
                 <span asp-validation-for="CheckOut" class="text-danger"></span>
             </div>
             @*<div class="form-group">
-                <label asp-for="Cost" class="control-label"></label>
-                <input asp-for="Cost" class="form-control" />
-                <span asp-validation-for="Cost" class="text-danger"></span>
-            </div>*@
+                    <label asp-for="Cost" class="control-label"></label>
+                    <input asp-for="Cost" class="form-control" />
+                    <span asp-validation-for="Cost" class="text-danger"></span>
+                </div>*@
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
     </div>
 </div>
+
+@if (ViewBag.Success != null)
+{
+<div>
+    <hr />
+    <h4> @ViewBag.Message</h4>
+</div>
+}
 
 <div>
     <a asp-action="Index">Back to List</a>
