--- a/WebHotel/WebHotel/Views/Bookings/Edit.cshtml
+++ b/WebHotel/WebHotel/Views/Bookings/Edit.cshtml
@@ -34,8 +34,8 @@
                 <span asp-validation-for="CheckOut" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Cost" class="control-label"></label>
-                <input asp-for="Cost" class="form-control" />
+               @*@ <label asp-for="Cost" class="control-label"></label> *@
+                <input type="hidden" asp-for="Cost" class="form-control" />
                 <span asp-validation-for="Cost" class="text-danger"></span>
             </div>
             <div class="form-group">
