--- a/WebHotel/WebHotel/Views/Shared/_Layout.cshtml
+++ b/WebHotel/WebHotel/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     @if (User.IsInRole("Customers"))
     {
-                <li><a asp-area="" asp-controller="Customers">My Details</a></li>
+                <li><a asp-area="" asp-controller="Customers" asp-action="MyDetails">My Details</a></li>
                 <li><a asp-area="" asp-controller="Rooms" asp-action="Index">Search Rooms</a></li>
                 <li><a asp-area="" asp-controller="Bookings" asp-action="Create">Book A Room</a></li>
                 <li><a asp-area="" asp-controller="Bookings"asp-action="Index">My Bookings</a></li>
