-validation checkin and checkout -fix some interfaces

--- a/WebHotel/WebHotel/Views/Customers/MyDetailsUpdate.cshtml
+++ b/WebHotel/WebHotel/Views/Customers/MyDetailsUpdate.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebHotel.Models.Customer
 
 @{
-    ViewData["Title"] = "MyDetailsUpdate";
+    ViewData["Title"] = "Update My Details";
 }
 
-<h2>MyDetailsUpdate</h2>
+<h2>Update My Details</h2>
 
 <h4>Customer</h4>
 <hr />
