--- a/WebHotel/WebHotel/Views/Bookings/Create.cshtml
+++ b/WebHotel/WebHotel/Views/Bookings/Create.cshtml
@@ -46,8 +46,14 @@
 <div>
     <hr />
     <h4> @ViewBag.Message</h4>
+    <h4> @ViewBag.Message2</h4>
+    <h4> @ViewBag.Message3</h4>
+    <h4> @ViewBag.Message4</h4>
+    <h4> @ViewBag.Message5</h4>
 </div>
 }
+
+
 
 <div>
     <a asp-action="Index">Back to List</a>
