--- a/WebHotel/WebHotel/Views/Customers/MyDetailsCreate.cshtml
+++ b/WebHotel/WebHotel/Views/Customers/MyDetailsCreate.cshtml
@@ -1,10 +1,10 @@
 ﻿@model WebHotel.Models.Customer
 
 @{
-    ViewData["Title"] = "MyDetailsCreate";
+    ViewData["Title"] = "Create My Details";
 }
 
-<h2>MyDetailsCreate</h2>
+<h2>Create My Details</h2>
 
 <h4>Customer</h4>
 <hr />
