--- a/WebHotel/WebHotel/Views/Rooms/Index.cshtml
+++ b/WebHotel/WebHotel/Views/Rooms/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@model IEnumerable<WebHotel.Models.Room>
+﻿@model WebHotel.Models.RoomAvailabilityViewModels.RoomAvailability
+
+@*@model IEnumerable<WebHotel.Models.Room>*@
 
 
 @{
@@ -11,7 +13,7 @@
     <a asp-action="Create">Create New</a>
 </p>
 
-<form asp-controller="Rooms" asp-action="Index" class="form-inline" method="get">
+<form asp-controller="Rooms" asp-action="Index" class="form-group" method="get">
     <div class="form-group">
         <label class="control-label">Number Of Bed(s):</label>
         <select name="BedCount" class="form-control">
@@ -24,10 +26,12 @@
     <div class="form-group">
         <label class="control-label">Check In Date:</label>
         <input type="date" name="CheckIn" class="form-control" />
+        <span class="alert-danger">@ViewData["Passed"]</span>
     </div>
     <div class="form-group">
         <label class="control-label">Check Out Date(s):</label>
         <input type="date" name="CheckOut" class="form-control" />
+        <span class="alert-danger">@ViewData["GreatherThan"]</span>
     </div>
     <div class="form-group">
         <input type="submit" value="Search" class="btn" />
@@ -37,36 +41,67 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.ID)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Level)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.BedCount)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
+            <th>Room ID</th>
+            <th>Room Level</th>
+            <th>Bed Count</th>
+            <th>Bed Count</th>
         </tr>
     </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Level)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.BedCount)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-        </tr>
-}
-    </tbody>
+    @if (ViewBag.Result != null)
+    {
+
+        <tbody>
+            @foreach (var item in ViewBag.Result)
+            {
+                <tr>
+                    <td>@item.ID</td>
+                    <td>@item.Level</td>
+                    <td>@item.BedCount</td>
+                    <td>@item.Price</td>
+                </tr>
+
+            }
+
+        </tbody>
+    }
 </table>
+
+
+
+
+@*<table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.ID)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Level)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.BedCount)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Price)
+                </th>
+            </tr>
+        </thead>
+        <tbody>
+    @foreach (var item in Model) {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Level)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.BedCount)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
+            </tr>
+    }
+        </tbody>
+    </table>*@
