--- a/WebHotel/WebHotel/Views/Shared/_Layout.cshtml
+++ b/WebHotel/WebHotel/Views/Shared/_Layout.cshtml
@@ -32,18 +32,17 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     @if (User.IsInRole("Customers"))
-    {
-                <li><a asp-area="" asp-controller="Customers">My Details</a></li>
-                <li><a asp-area="" asp-controller="Rooms" asp-action="Index">Search Rooms</a></li>
-                <li><a asp-area="" asp-controller="Bookings" asp-action="Create">Book A Room</a></li>
-                <li><a asp-area="" asp-controller="Bookings"asp-action="Index">My Bookings</a></li>
-}
+                    {
+                        <li><a asp-area="" asp-controller="Customers"asp-action="Mydetails">My Details</a></li>
+                        <li><a asp-area="" asp-controller="Rooms" asp-action="Index">Search Rooms</a></li>
+                        <li><a asp-area="" asp-controller="Bookings" asp-action="Create">Book A Room</a></li>
+                        <li><a asp-area="" asp-controller="Bookings"asp-action="Index">My Bookings</a></li>
+                    }
                     @if (User.IsInRole("Administrators"))
-    {
-                <li>><a asp-area="" asp-controller="Bookings" asp-action="Index">Manage Bookings </a></li>
-                <li>><a asp-area="" asp-controller="Bookings" asp-action="Statistics">Statistics</a></li>
-
-}
+                    {
+                        <li>><a asp-area="" asp-controller="Bookings" asp-action="Index">Manage Bookings </a></li>
+                        <li>><a asp-area="" asp-controller="Bookings" asp-action="Statistics">Statistics</a></li>
+                    }
 
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
