--- a/WebHotel/WebHotel/Views/Shared/_Layout.cshtml
+++ b/WebHotel/WebHotel/Views/Shared/_Layout.cshtml
@@ -41,8 +41,8 @@
 
                     @if (User.IsInRole("Administrators"))
                     {
-                        <li>><a asp-area="" asp-controller="Bookings" asp-action="Index">Manage Bookings </a></li>
-                        <li>><a asp-area="" asp-controller="Bookings" asp-action="Statistics">Statistics</a></li>
+                        <li><a asp-area="" asp-controller="Bookings" asp-action="Index">Manage Bookings </a></li>
+                        <li><a asp-area="" asp-controller="Bookings" asp-action="Statistics">Statistics</a></li>
                     }
 
                 </ul>
