changed statistics controller

--- a/WebHotel/WebHotel/Views/Shared/_Layout.cshtml
+++ b/WebHotel/WebHotel/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                     @if (User.IsInRole("Administrators"))
                     {
                         <li><a asp-area="" asp-controller="Bookings" asp-action="Index">Manage Bookings </a></li>
-                        <li><a asp-area="" asp-controller="Bookings" asp-action="Statistics">Statistics</a></li>
+                        <li><a asp-area="" asp-controller="Statistics" asp-action="Index">Statistics</a></li>
                     }
 
                 </ul>
