some minor fixes introduction is now written and some changes oto date controller in search room

--- a/WebHotel/WebHotel/Views/Home/Index.cshtml
+++ b/WebHotel/WebHotel/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
     <div class="col-md-6">
         <h2>Welcome to Western Sydney Hotel</h2>
         <ul>
-            <li>Introduction blar blar</li>
+         <p>A state of art five star hotel close to Parramatta Station and Library. Explore Parramatta and the city of Sydney with luxury at your beck and call. </p>
         </ul>
     </div>
     <div class="col-md-6">
