--- a/WebHotel/WebHotel/Views/Bookings/Create.cshtml
+++ b/WebHotel/WebHotel/Views/Bookings/Create.cshtml
@@ -20,12 +20,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="CheckIn" class="control-label"></label>
-                <input asp-for="CheckIn" class="form-control" />
+                <input asp-for="CheckIn" class="form-control" value="@DateTime.Today"/>
                 <span asp-validation-for="CheckIn" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CheckOut" class="control-label"></label>
-                <input asp-for="CheckOut" class="form-control" />
+                <input asp-for="CheckOut" class="form-control" value="@DateTime.Today" />
                 <span asp-validation-for="CheckOut" class="text-danger"></span>
             </div>
             @*<div class="form-group">
